[package]
name = "wasm"
version = "0.1.0"
authors = ["Mohammad Amin Sameti <mamins1376@gmail.com>"]
edition = "2018"
description = "wasm module of wasm-fft"
repository = "https://github.com/mamins1376/wasm-fft"
license = "MIT"

[lib]
name = "wasm"
path = "lib.rs"
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2.74"
wee_alloc = "0.4.5"
rustfft = "6.0.1"

[profile.release]
lto = true
